# lumi

./: .env.template  .gitignore  .mcp.json  CLAUDE.md  README.md  app.py  pyproject.toml  test_report.json
.streamlit/: config.toml
api/: main.py  models.py
api/routes/: chat.py  sublabs.py
demos/: dynamic_sublab.py
docs/: tools-inventory-audit.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/chat/[id]/: page.tsx
frontend/src/app/review/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/chat/: agent-activity-group.tsx  agent-trace.tsx  chat-list.tsx  hitl-card.tsx  integration-card.tsx  message.tsx
frontend/src/components/landing/: sublab-picker.tsx  suggestion-chips.tsx
frontend/src/components/panels/: agents-panel.tsx  plan-panel.tsx  tools-panel.tsx
frontend/src/lib/: api.ts  types.ts
landing/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
landing/src/app/: globals.css  layout.tsx
landing/src/components/: landing-page.tsx
src/: factory.py  mcp_bridge.py
src/agents/: __init__.py  antibody_engineer.py  assay_design.py  base_agent.py  bio_pathways.py  biochemistry.py  bioengineering.py  bioimaging.py  biophysics.py  cancer_biology.py  cell_biology.py  clinical_trialist.py  developability.py  dual_use_screening.py  dynamic_factory.py  fda_safety.py  functional_genomics.py  glycoengineering.py  immunology.py  lab_automation.py  lead_optimization.py  literature_synthesis.py  microbiology.py  molecular_biology.py  pathology.py  pharmacologist.py  physiology.py  prompt_library.py  protein_intelligence.py  protocols.py  red_team.py  single_cell_atlas.py  statistical_genetics.py  structure_design.py  synthetic_biology.py  systems_biology.py  target_biologist.py  toxicogenomics.py
src/biosecurity_engine/: data.py  engine.py
src/divisions/: __init__.py  base_lead.py  imaging.py  immunology_cancer.py  synbio.py
src/mcp_servers/: base.py
src/mcp_servers/alignment/: server.py
src/mcp_servers/bindingdb/: server.py
src/mcp_servers/biogrid/: server.py
src/mcp_servers/biorender/: server.py
src/mcp_servers/biosecurity/: server.py
src/mcp_servers/cbioportal/: server.py
src/mcp_servers/ddinter/: server.py
src/mcp_servers/depmap/: server.py
src/mcp_servers/disgenet/: server.py
src/mcp_servers/epigenomics_cli/: server.py
src/mcp_servers/genebass/: server.py
src/mcp_servers/gwas_cli/: server.py
src/mcp_servers/hpo/: server.py
src/mcp_servers/jaspar/: server.py
src/mcp_servers/mirtarbase/: server.py
src/mcp_servers/monarch/: server.py
src/mcp_servers/mpd/: server.py
src/mcp_servers/phylogenetics/: server.py
src/mcp_servers/pride/: server.py
src/mcp_servers/protein_design/: server.py
src/mcp_servers/pymol_structure/: server.py
src/mcp_servers/quickgo/: server.py
src/mcp_servers/remap/: server.py
src/mcp_servers/sv_calling/: server.py
src/mcp_servers/tamarind/: server.py
src/mcp_servers/taxonomy/: server.py
src/mcp_servers/ucsc/: server.py
src/mcp_servers/unichem/: server.py
src/orchestrator/: __init__.py  cso.py  pipeline.py  review_panel.py  sublab_executor.py  sublab_planner.py
src/orchestrator/agent_factory/: __init__.py
src/orchestrator/hitl/: __init__.py  review_queue.py  router.py  slack_listener.py  slack_notifier.py
src/orchestrator/living_document/: __init__.py  document.py  manager.py
src/reports/: __init__.py  figure_collector.py
src/reports/templates/: report.html
src/sublabs/: __init__.py  assay_troubleshooting.py  base.py  biomarker_curation.py  clinical_translation.py  lead_optimization.py  regulatory_submissions.py  target_validation.py
src/utils/: llm.py  types.py
src/yami_simulator/: interface.py
tests/: eval_pipeline.py  test_biosecurity_engine.py  test_sublabs.py
