[project]
name = "lumi-virtual-lab"
version = "0.1.0"
description = "YOHAS-VB: End-to-end computational drug discovery agentic swarm"
requires-python = ">=3.11"
dependencies = [
    # Core
    "anthropic>=0.40.0",
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",

    # Data
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "networkx>=3.2.0",

    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",

    # MCP client (figure generation via AntV)
    "mcp>=1.0.0",
    "httpx-sse>=0.4.0",

    # Report generation
    "jinja2>=3.1.0",
    "xhtml2pdf>=0.2.11",

    # UI
    "streamlit>=1.40.0",

    # Async
    "uvloop>=0.19.0;sys_platform!='win32'",
]

[project.optional-dependencies]
bio = [
    "biopython>=1.83",
    "scanpy>=1.10.0",
    "anndata>=0.10.0",
    "celltypist>=1.6.0",
    "decoupler>=1.6.0",
    "biotite>=0.41.0",
    "prody>=2.4.0",
    "cobra>=0.29.0",
    "pyensembl>=2.3.0",
    "pyranges>=0.1.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "lifelines>=0.29.0",
    "seaborn>=0.13.0",
    "polars>=0.20.0",
    "python-igraph>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]
ml = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "scikit-learn>=1.4.0",
    "fair-esm>=2.0.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
]
chem = [
    "rdkit-pypi>=2023.9.0",
    "datamol>=0.12.0",
]
structure = [
    # pymol-open-source must be installed via conda-forge, not pip:
    #   conda create -n pymol_agent python=3.11 pymol-open-source -c conda-forge
    #   conda run -n pymol_agent pip install fastmcp mcp httpx-sse
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
